# NativeWebviewCrashExample

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/webview_crash/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NativeCrashHandler.cpp  NativeCrashHandler.h
app/src/main/java/com/example/webview_crash/: MainActivity.kt
app/src/main/java/com/example/webview_crash/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/webview_crash/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
